--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>This is title</h1>
+    <h1>⭐⭐⭐ This is title ⭐⭐⭐</h1>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio quae
+      voluptas libero at eos eligendi culpa dicta officia atque error unde iusto
+      numquam architecto magnam ipsa, illo iste assumenda ducimus.
+    </p>
   </body>
 </html>
